add_executable(remap
               "apex_legends/apex_legends_collisions.cpp"
               "apex_legends/apex_legends_misc.cpp"
               "apex_legends/apex_legends_vis.cpp"
               "apex_legends/apex_legends.cpp"
               "apex_legends/apex_legends.h"
               "titanfall/titanfall_collisions.cpp"
               "titanfall/titanfall_decompile.cpp"
               "titanfall/titanfall_misc.cpp"
               "titanfall/titanfall_vis.cpp"
               "titanfall/titanfall.cpp"
               "titanfall/titanfall.h"
               "titanfall2/titanfall2_vis.cpp"
               "titanfall2/titanfall2.cpp"
               "titanfall2/titanfall2.h"
               "brush.cpp"
               "bsp.cpp"
               "bspfile_abstract.cpp"
               "bspfile_abstract.h"
               "bspfile_shared.cpp"
               "bspfile_shared.h"
               "decals.cpp"
               "facebsp.cpp"
               "fog.cpp"
               "games.cpp"
               "games.h"
               "image.cpp"
               "leakfile.cpp"
               "lump_names.h"
               "main.cpp"
               "map.cpp"
               "mesh.cpp"
               "model.cpp"
               "model.h"
               "patch.cpp"
               "path_init.cpp"
               "portals.cpp"
               "prtfile.cpp"
               "remap.h"
               "shaders.cpp"
               "shaders.h"
               "surface_extra.cpp"
               "surface_extra.h"
               "surface_foliage.cpp"
               "surface_fur.cpp"
               "surface_meta.cpp"
               "surface.cpp"
               "tjunction.cpp"
               "tree.cpp"
               "${CMAKE_SOURCE_DIR}/icons/remap.rc"
              )

target_include_directories(remap PRIVATE .
                           ${CMAKE_SOURCE_DIR}/tools/shared
                           ${CMAKE_SOURCE_DIR}/libs/assimp
                           ${PNG_INCLUDE_DIRS}
                           ${LIBXML2_INCLUDE_DIRS}
                          )

target_link_libraries(remap
                      xml
                      ddslib
                      etclib
                      filematch
                      l_net
                      commandlib
                      assimp
                      ToolsShared
                      Threads::Threads
                      ${PNG_LIBRARIES}
                      ${ZLIB_LIBRARIES}
                      ${LIBXML2_LIBRARIES}
                     )

set_target_properties(remap PROPERTIES LINK_FLAGS "-Wl,-rpath,./")
